--- a/main/webapp/css/m/subpage.css
+++ b/main/webapp/css/m/subpage.css
@@ -212,16 +212,16 @@
 .content .content_body .write_btn_wrap .save{ background-color: #002b5c; color: #fff; border: 1px solid #002b5c; }
 .content .content_body .write_btn_wrap .goList{ background-color: #eaeaea; border: 1px solid #d1d1d1; color: black; }
 
-/* 페이징 */
-.content .content_body #paging { margin-top: 40px; text-align: center; vertical-align: top; position: relative; }
+/* 페이징 sada*/
+.content .content_body .paging { margin-top: 40px; text-align: center; vertical-align: top; position: relative; }
 #paging{ margin-top: 40px; text-align: center; vertical-align: top; position: relative; }
 
-.content .content_body .paging li { display: inline-block; width: 26px; height: 26px; vertical-align: middle; }
-.content .content_body .paging li.write_btn{ display:none; width: 80px; position: absolute; right: 0; font-size: .8em; top:0; }
-.content .content_body .paging li.first>a { background: url(../../images/subpage/customer_center/paging_first.gif) no-repeat; }
-.content .content_body .paging li.prev>a { background: url(../../images/subpage/customer_center/paging_prev.gif) no-repeat; }
-.content .content_body .paging li.next>a { background: url(../../images/subpage/customer_center/paging_next.gif) no-repeat; }
-.content .content_body .paging li.last>a { background: url(../../images/subpage/customer_center/paging_last.gif) no-repeat; }
+.content .content_body .paging li { display: inline-block; width: 16px; height: 26px; vertical-align: middle;  list-style:none !important; }
+/* .content .content_body .paging li.write_btn{ display:none; width: 80px; position: absolute; right: 0; font-size: .8em; top:0; } */
+.content .content_body .paging li.first>a { background: url(../../images/subpage/customer_center/paging_first.gif) no-repeat;margin-left:-60px }
+.content .content_body .paging li.prev>a { background: url(../../images/subpage/customer_center/paging_prev.gif) no-repeat;  margin-left:-20px }
+.content .content_body .paging li.next>a { background: url(../../images/subpage/customer_center/paging_next.gif) no-repeat;  margin-left:60px }
+.content .content_body .paging li.last>a { background: url(../../images/subpage/customer_center/paging_last.gif) no-repeat;  margin-left:60px }
 .content .content_body .paging li.prev { margin-right: 10px; }
 .content .content_body .paging li.next { margin-left: 10px; }
 .content .content_body .paging li a { display: block; width: 100%; height: 26px; line-height: 26px; text-align: center; }
@@ -232,7 +232,7 @@
 .content .content_body .paging li.active a{ color: #000; border-bottom: 2px solid #002b5c; box-sizing: border-box; }
 
 /* 검색 */
-.content .content_body .search { display: none; width: 100%; padding: 20px 0; margin: 10px 0; border: 1px solid #d7d7d7; background-color: #f5f6f9; text-align: center; }
+.content .content_body .search {  width: 100%; padding: 20px 0; margin: 10px 0; border: 1px solid #d7d7d7; background-color: #f5f6f9; text-align: center; }
 .content .content_body .search select { min-width: 100px; height: 26px; line-height: 26px; border: 1px solid #a6a6a6; box-sizing: border-box; }
 .content .content_body .search .inputText { display: inline-block; padding: 0 10px; height: 24px; border: 1px solid #a6a6a6; vertical-align: top; }
 .content .content_body .search .btn { cursor: pointer; box-sizing: border-box; display: inline-block; min-width: 55px; height: 26px; line-height: 26px; padding: 0 8px; margin: 0px 2px; text-align: center; vertical-align: top; overflow: hidden; }
