--- a/main/webapp/css/pc/subpage.css
+++ b/main/webapp/css/pc/subpage.css
@@ -245,7 +245,7 @@
 .content .content_body .paging li.active a{ color: #000; border-bottom: 2px solid #002b5c; box-sizing: border-box; }
 
 /* 검색 */
-.content .content_body .search { display: none; width: 100%; padding: 20px 0; margin: 10px 0; border: 1px solid #d7d7d7; background-color: #f5f6f9; text-align: center; }
+.content .content_body .search { width: 100%; padding: 20px 0; margin: 10px 0; border: 1px solid #d7d7d7; background-color: #f5f6f9; text-align: center; }
 .content .content_body .search select { min-width: 100px; height: 26px; line-height: 26px; border: 1px solid #a6a6a6; box-sizing: border-box; }
 .content .content_body .search .inputText { display: inline-block; padding: 0 10px; height: 24px; border: 1px solid #a6a6a6; vertical-align: top; }
 .content .content_body .search .btn { cursor: pointer; box-sizing: border-box; display: inline-block; min-width: 55px; height: 26px; line-height: 26px; padding: 0 8px; margin: 0px 2px; text-align: center; vertical-align: top; overflow: hidden; }
