--- a/main/webapp/css/m/subpage.css
+++ b/main/webapp/css/m/subpage.css
@@ -167,13 +167,24 @@
 .content .content_body .board>tbody>tr>td:nth-child(1), 
 .content .content_body .board>tbody>tr>td:nth-child(4) { display: none; }
 
-.content .content_body .board>tbody>tr>td { text-align: center; vertical-align: middle; line-height: 15px; font-size: .8em; }
+.content .content_body .board>tbody>tr>td { text-align: center; vertical-align: middle; line-height: 15px; font-size: .8em;
+overflow:hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    word-break: keep-all; 
+ }
 .content .content_body .board .subject { text-align: left; font-size: .9em; line-height: 29px !important; height: 27px; }
 .content .content_body .board .subject a { display: block; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
 .content .content_body .board .subject a:hover .text{ text-decoration: underline; }
 .content .content_body .board .subject a.new:before{ font-size: .8em; content: 'NEW'; font-family: 'NanumGothic-Regular'; width: 10px; background-color: #1763ee; padding: 3px 5px; color: #fff; vertical-align: middle; margin-right: 5px; border-radius: 3px; }
 .content .content_body .write_btn { display:none; width: 100px; height: 40px; line-height: 40px; text-align: center; position: absolute; right: 14px; top: 0; }
 .content .content_body .write_btn a { background-color: #002b5c; color: #fff; display: block; border: 1px solid #002b5c; }
+.listtd {
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    word-break: keep-all;
+}
 
 /* 공지사항 글보기 */
 .content .content_body .view_tbl caption, 
@@ -242,7 +253,7 @@
     /*.content .content_body { padding: 54px 30px 34px 0; }*/
     /*.content .content_header { margin-right: 30px; }*/
     /*.sub_mainVisual{ width: 1200px; }*/
-    .content{ margin-left: 20px !important; }
+    /* .content{ margin-left: 20px !important; } */
     .content .content_body .tab_menu { width: 900px; }
 
     .content .content_body .tab_menu .tab_01, 
