--- a/main/webapp/css/pc/subpage.css
+++ b/main/webapp/css/pc/subpage.css
@@ -177,10 +177,18 @@
 .content .content_body .board>thead { width: 100%; border-top: 2px solid #333; text-align: center; }
 .content .content_body .board>thead>tr { background-color: #f5f5f5; color: black; }
 
-.content .content_body .board>thead>tr>th, 
-.content .content_body .board>tbody>tr>td { border-bottom: 1px solid #e0e0e0; padding: 10px 2px; line-height: 27px; }
+    
 
-.content .content_body .board>thead>tr>th { font-family: 'NanumGothic-Bold'; font-size: .9em; }
+.content .content_body .board>thead>tr>th, 
+.content .content_body .board>tbody>tr>td { border-bottom: 1px solid #e0e0e0; padding: 10px 2px; line-height: 27px; 
+overflow:hidden;
+
+    text-overflow: ellipsis;
+    white-space: normal;
+    word-break: keep-all;  }
+
+.content .content_body .board>thead>tr>th { font-family: 'NanumGothic-Bold'; font-size: .9em;	overflow: hidden;
+}
 .content .content_body .board>tbody>tr>td { text-align: center; vertical-align: middle; font-size: .9em; }
 .content .content_body .board .subject { text-align: left; padding-left: 20px; font-size: .9em; line-height: 29px !important; height: 27px; }
 .content .content_body .board .subject a { display: block; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
